--- a/Tech/Seminars/FaceRecognition.ipynb
+++ b/Tech/Seminars/FaceRecognition.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "FaceRecognition.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNwtbOs01Fm4Z/PYglkApY6",
+      "authorship_tag": "ABX9TyOGVXMMJWr3+41Wkp+7N6kx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# Facial Recognition and digital rights\n",
+        "# Facial recognition and digital rights\n",
         "\n",
         "*Seminar on 09-09-2020 by Rafael Zanatta ([Data Privacy](https://www.dataprivacybr.org/)), one of the people responsible for the production of [Marco Civil da Internet](http://pt.wikipedia.org/wiki/Marco_Civil_da_Internet) and [Lei Geral de Proteção de Dados Pessoais (LGPD)](http://pt.wikipedia.org/wiki/Lei_Geral_de_Prote%C3%A7%C3%A3o_de_Dados_Pessoais). More about the later [here](http://www.planalto.gov.br/ccivil_03/_ato2015-2018/2018/Lei/L13709.htm). Zanatta also participated on [this podcast](https://outraspalavras.net/podcasts/podcast-reconhecimento-facial-a-nova-ameaca/) talking about the subject.*\n"
       ]
