More typo and spelling

--- a/Tech/Seminars/FaceRecognition.ipynb
+++ b/Tech/Seminars/FaceRecognition.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "FaceRecognition.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOGVXMMJWr3+41Wkp+7N6kx",
+      "authorship_tag": "ABX9TyOPHk2DqLwv4XXAkfD9x+qh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -86,7 +86,7 @@
       "source": [
         "## Case study: Metro of São Paulo\n",
         "\n",
-        "ViaQuatro, responsible for administering the yellow line of the metro network, was [selling recording of commuters](https://theintercept.com/2018/08/31/metro-cameras-acao-civil/) to adapt to better ads depending on their humor. IDEC, soon after the approvation of LGPD in 2018, [filed a lawsuit](https://irisbh.com.br/wp-content/uploads/2019/09/Acao-Civil-Publica-IDEC-vs.-ViaQuatro-Parecer-do-IRIS-1.pdf) against ViaQuatro.\n",
+        "ViaQuatro, responsible for administering the yellow line of the metro network, was [selling video recording of commuters](https://theintercept.com/2018/08/31/metro-cameras-acao-civil/) to adapt to better ads depending on their humor. IDEC, soon after the approvation of LGPD in 2018, [filed a lawsuit](https://irisbh.com.br/wp-content/uploads/2019/09/Acao-Civil-Publica-IDEC-vs.-ViaQuatro-Parecer-do-IRIS-1.pdf) against ViaQuatro.\n",
         "\n",
         "Also, Metro of São Paulo doesn't provide information about how is [using data about face recognition](https://politica.estadao.com.br/blogs/fausto-macedo/reconhecimento-facial-no-metro-pode-ter-consequencias-desastrosas-alertam-advogados/)."
       ]
@@ -98,7 +98,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## Case Study: Police Face Recognition in America\n",
+        "## Case study: Police Face Recognition in America\n",
         "\n",
         "A [study](https://www.perpetuallineup.org/) about unregulated Police Face Recognition in America."
       ]
@@ -110,7 +110,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## Case Study: Wrongfully arrested two times\n",
+        "## Case study: Wrongfully arrested two times\n",
         "\n",
         "Jamerson, 33 years old, was [wrongfully arrested](https://extra.globo.com/casos-de-policia/justica-arquiva-processo-contra-vidraceiro-preso-duas-vezes-por-engano-24324239.html) two times."
       ]
@@ -122,7 +122,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## Case Study: Clearview and destruction of privacy\n",
+        "## Case study: Clearview and destruction of privacy\n",
         "\n",
         "[Clearview](https://www.nytimes.com/2020/01/18/technology/clearview-privacy-facial-recognition.html) has a system of facial recognition even better than the FBI's."
       ]
@@ -134,7 +134,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## Case Study: Lawsuit against Hering\n",
+        "## Case study: Lawsuit against Hering\n",
         "\n",
         "[Senacon fines Hering](https://olhardigital.com.br/noticia/senacon-multa-hering-em-r-58-mil-por-uso-indevido-de-reconhecimento-facial/105951) on R$ 58.000 for misuse of facial recognition.\n",
         "\n"
