--- a/Tech/Seminars/Facial recognition and digital rights.ipynb
+++ b/Tech/Seminars/Facial recognition and digital rights.ipynb
@@ -21,7 +21,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/brenoslivio/Essays/blob/master/Tech/Seminars/FaceRecognition.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/brenoslivio/Essays/blob/master/Tech/Seminars/Facial recognition and digital rights.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
